<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SchedulingActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl_title"
        android:background="@color/colorPrimaryDark"
        android:layout_height="55dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:text="@string/schedule"/>
        <ImageView
            android:layout_width="55dp"
            android:src="@drawable/leftarrow"
            android:padding="14dp"
            android:id="@+id/img_back"
            android:layout_marginLeft="10dp"
            android:layout_height="55dp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/rl_title"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/Linear2"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/Linear1">

    <TextView
        android:layout_weight="1"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="15dp"/>

    <Spinner
        android:layout_weight="1"
        android:id="@+id/spinnerApplianceType"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#eee8dc"
        android:entries="@array/Appliance_types"
        android:prompt="@string/dropdownfortype" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:id="@+id/Linear3"
        android:layout_below="@+id/Linear2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" >
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15dp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/editTextStartingDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateformat"
            android:inputType="date"
            android:textColorHint="#8b8378" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear4"
        android:layout_below="@+id/Linear3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="2"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15dp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/editTextApplianceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/Linear5"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/Linear4">
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="15dp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/editTextTotalTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mins"
            android:inputType="time"
            android:textColorHint="#8b8378" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:weightSum="2"
        android:layout_marginRight="30dp"
        android:id="@+id/Linear6"
        android:layout_below="@+id/Linear5">
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usage"
            android:textSize="15dp"/>

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinnerUsage"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#eee8dc"
            android:entries="@array/usage"
            android:prompt="@string/dropdownforusage" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        android:layout_marginRight="30dp"
        android:id="@+id/Linear7"
        android:layout_below="@+id/Linear6">
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="15dp"/>

        <EditText
            android:layout_weight="1"
            android:id="@+id/editTextRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/watts"
            android:inputType="number"
            android:textColorHint="#8b8378" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:weightSum="3"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:id="@+id/Linear8"
        android:layout_below="@+id/Linear7">
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upperlimit"
            android:textSize="15dp"/>

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinnerUL1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:background="#eee8dc"
            android:entries="@array/hours"
            android:prompt="@string/dropdownforhours" />

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinnerUL2"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_height="40dp"
            android:background="#eee8dc"
            android:clickable="true"
            android:entries="@array/minutes"
            android:prompt="@string/dropdownforminutes" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:weightSum="3"
        android:layout_marginRight="30dp"
        android:id="@+id/Linear9"
        android:layout_below="@+id/Linear8">
        <TextView
            android:layout_weight="1"
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/lowerlimit"
            android:textSize="15dp"/>

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinnerLL1"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#eee8dc"
            android:entries="@array/hours"
            android:prompt="@string/dropdownforhours" />

        <Spinner
            android:layout_weight="1"
            android:id="@+id/spinnerLL2"
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_height="40dp"
            android:background="#eee8dc"
            android:clickable="true"
            android:entries="@array/minutes"
            android:prompt="@string/dropdownforminutes" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:weightSum="2"

        android:layout_marginRight="30dp"
        android:id="@+id/Linear10"
        android:layout_below="@+id/Linear9">

        <Button
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="15dp"/>

        <Button
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VER"
            android:textSize="15dp"/>
    </LinearLayout>


    </RelativeLayout>
    </ScrollView>

</RelativeLayout>