<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DevicesActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="05dp"
        android:layout_marginRight="10dp">
    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_above="@+id/Linear2"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/listViewName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@color/colorPrimaryDark"
            android:textColor="#000000" />
    </LinearLayout>
    <RelativeLayout
        android:gravity="bottom|center"
        android:id="@+id/Linear2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal"
        android:weightSum="3" >
        <Button
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/addmore"
            android:textColor="#000000"
            android:id="@+id/buttonAddMore"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/buttonSchedule"
            android:layout_width="100dp"
            android:layout_toRightOf="@+id/buttonAddMore"
            android:layout_height="wrap_content"
            android:text="@string/schedule2"
            android:textColor="#000000" />

        <Button
            android:layout_weight="1"
            android:layout_toRightOf="@+id/buttonSchedule"
            android:id="@+id/buttonHome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textColor="#000000" />
    </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>